--- a/src/sk/uher/weather/ui.fxml
+++ b/src/sk/uher/weather/ui.fxml
@@ -15,16 +15,16 @@
     <HBox>
         <VBox>
             <TextField fx:id="citySearchField" promptText="Insert City Name" onAction="#onSearch"/>
-            <TableView>
+            <TableView fx:id="tableView">
                 <columns>
                     <TableColumn fx:id="idCol" prefWidth="50" text="id">
                         <cellValueFactory> <PropertyValueFactory property="id"/> </cellValueFactory>
                     </TableColumn>
                     <TableColumn fx:id="cityCol" prefWidth="200" text="City Name">
-                        <cellValueFactory> <PropertyValueFactory property="city"/> </cellValueFactory>
+                        <cellValueFactory> <PropertyValueFactory property="cityName"/> </cellValueFactory>
                     </TableColumn>
                     <TableColumn fx:id="tempCol" prefWidth="100" text="Temperature">
-                        <cellValueFactory> <PropertyValueFactory property="temperature"/> </cellValueFactory>
+                        <cellValueFactory> <PropertyValueFactory property="temp"/> </cellValueFactory>
                     </TableColumn>
                     <TableColumn fx:id="weatherCol" prefWidth="200" text="Weather">
                         <cellValueFactory> <PropertyValueFactory property="weather"/> </cellValueFactory>
@@ -35,16 +35,16 @@
 
         <VBox>
             <TextField fx:id="citySearchField2" promptText="Insert City Name" onAction="#onSearch"/>
-            <TableView>
+            <TableView fx:id="tableView2">
                 <columns>
                     <TableColumn fx:id="idCol2" prefWidth="50" text="id">
                         <cellValueFactory> <PropertyValueFactory property="id"/> </cellValueFactory>
                     </TableColumn>
                     <TableColumn fx:id="cityCol2" prefWidth="200" text="City Name">
-                        <cellValueFactory> <PropertyValueFactory property="city"/> </cellValueFactory>
+                        <cellValueFactory> <PropertyValueFactory property="cityName"/> </cellValueFactory>
                     </TableColumn>
                     <TableColumn fx:id="tempCol2" prefWidth="100" text="Temperature">
-                        <cellValueFactory> <PropertyValueFactory property="temperature"/> </cellValueFactory>
+                        <cellValueFactory> <PropertyValueFactory property="temp"/> </cellValueFactory>
                     </TableColumn>
                     <TableColumn fx:id="weatherCol2" prefWidth="200" text="Weather">
                         <cellValueFactory> <PropertyValueFactory property="weather"/> </cellValueFactory>
