--- a/src/sk/uher/weather/ui.fxml
+++ b/src/sk/uher/weather/ui.fxml
@@ -7,13 +7,22 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.geometry.Insets?>
 <VBox fx:controller="sk.uher.weather.Controller"
       xmlns:fx="http://javafx.com/fxml" alignment="center">
+
+    <padding>
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+    </padding>
 
     <Label fx:id="dateLabel"/>
 
     <HBox>
         <VBox>
+            <padding>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </padding>
+
             <TextField fx:id="citySearchField" promptText="Insert City Name" onAction="#onSearch"/>
             <TableView fx:id="tableView">
                 <columns>
@@ -31,6 +40,10 @@
         </VBox>
 
         <VBox>
+            <padding>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </padding>
+
             <TextField fx:id="citySearchField2" promptText="Insert City Name" onAction="#onSearch"/>
             <TableView fx:id="tableView2">
                 <columns>
